# ViGaMuP

./: README.md
app/: CMakeLists.txt  app-release.apk  build.gradle  proguard-rules.pro
app/.externalNativeBuild.old/cmake/debug/armeabi/: CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/.externalNativeBuild.old/cmake/debug/armeabi-v7a/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/.externalNativeBuild.old/cmake/debug/x86/: CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/.externalNativeBuild.old/cmake/release/armeabi/: CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/.externalNativeBuild.old/cmake/release/armeabi-v7a/: CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/.externalNativeBuild.old/cmake/release/x86/: CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/src/androidTest/java/nl/vlessert/vigamup/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: vgmrips_full.json
app/src/main/cpp/: kss_player.c  native-lib.cpp  player_engine.c
app/src/main/cpp/dumb/: CMakeLists.txt
app/src/main/cpp/game-music-emu-0.6.0/: CMakeLists.txt
app/src/main/cpp/game-music-emu-0.6.0/demo/: CMakeLists.txt  basics.c
app/src/main/cpp/libkss/: CMakeLists.txt  fix.sh  functions_to_fix.txt
app/src/main/cpp/libkss/modules/drivers/: mgsdrv.h
app/src/main/cpp/libkss/modules/emu2149/: emu2149.c  emu2149.h
app/src/main/cpp/libkss/modules/emu2413/: 2413tone.h  emu2413.c  emu2413.h  sample2413.c
app/src/main/cpp/libkss/modules/kmz80/: CMakeLists.txt  kmdmg.c  kmevent.c  kmevent.h  kmr800.c  kmtypes.h  kmz80.c  kmz80.h  kmz80.txt  kmz80c.c  kmz80i.h  kmz80t.c  makeft.c
app/src/main/cpp/libkss/src/: kss2wav.c  kssplay.c  kssplay.h
app/src/main/cpp/libkss/src/filters/: dc_filter.c  dc_filter.h  filter.c  filter.h  rc_filter.c  rc_filter.h
app/src/main/cpp/libkss/src/kss/: bgm2kss.c  kss.c  kss.h  kss2kss.c  kssload.c  mbm2kss.c  mgs2kss.c  mpk2kss.c  opx2kss.c
app/src/main/cpp/libkss/src/vm/: mmap.c  mmap.h  vm.c  vm.h
app/src/main/cpp/vgmplay/: CMakeLists.txt
app/src/main/cpp/vgmplay/src/: Makefile  VGMPlay.c  VGMPlay.h  VGMPlayUI.c  VGMPlay_AddFmts.c  VGMPlay_Intf.h
app/src/main/cpp/vgmplay/src/chips/: mamedef.h  opl.h  ymf278b.c
app/src/main/java/nl/vlessert/vigamup/: Constants.java  EssentialsDownloaderActivity.java  ExtractArchive.java  Game.java  GameCollection.java  GameList.java  GameListMenuItem.java  GameTrack.java  HelperFunctions.java  ItemClickSupport.java  MainActivity.java  MultipleItemsList.java  OldStuff.java  PlayerService.java  (+5 more)
app/src/main/res/drawable/: border.xml  item_selection.xml
app/src/main/res/layout/: activity_custom_notification.xml  activity_main.xml  activity_vgmrips_downloader.xml  barcode_capture.xml  content_main.xml  custom_notification.xml  custom_notification_expanded.xml  custom_notification_expanded_rectangular_image.xml  custom_notification_expanded_square_image.xml  custom_notification_expanded_stretched_image.xml  custom_simple_list_item_2.xml  essentials_download_menu.xml  gamelist_fragment.xml  gamelist_item.xml  gamelist_menu_item.xml  list_fragment.xml  tracklist_header.xml  tracklist_item_textview.xml  tracklist_textview_header.xml  vgmrips_downloader_adapter.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
gradle/wrapper/: gradle-wrapper.properties
(+43 files in other folders)
